--- a/SweetHistory/AndroidManifest.xml
+++ b/SweetHistory/AndroidManifest.xml
@@ -8,7 +8,12 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
-    <application
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+	<uses-permission android:name="android.permission.VIBRATE"/>
+
+
+	<application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +27,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+
+
+		<receiver android:name=".SampleAlarmReceiver"/>
+
+		<receiver android:name=".SampleBootReceiver"
+		          android:enabled="false">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+			</intent-filter>
+		</receiver>
+		<service android:name=".SampleSchedulingService" />
+
+	</application>
 
 </manifest>
