--- a/SweetHistory/build.gradle
+++ b/SweetHistory/build.gradle
@@ -15,16 +15,17 @@ repositories {
 dependencies {
     compile 'com.google.android.gms:play-services:3.1.+'
     compile 'com.android.support:support-v4:18.0.+'
+    compile "com.android.support:appcompat-v7:18.0.+"
 }
 
 android {
 
-    compileSdkVersion 19
-    buildToolsVersion "18.0.1"
+    compileSdkVersion 17
+    buildToolsVersion "18.1.1"
 
     defaultConfig {
         minSdkVersion 11
-        targetSdkVersion 19
+        targetSdkVersion 17
     }
     sourceSets {
         main {
