Shared preferences e intent camara

--- a/SweetHistory/AndroidManifest.xml
+++ b/SweetHistory/AndroidManifest.xml
@@ -8,12 +8,14 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-	<uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
-
-	<application
+    <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -23,41 +25,37 @@
             android:label="@string/sectionTimeLine" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.devbus.sweethistory.FormElementActivity"
-            android:label="@string/app_name" >           
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.devbus.sweethistory.FormBabyActivity"
+            android:label="@string/sectionBabyRegister" >
+        </activity>
+        <activity
+            android:name="com.devbus.sweethistory.FormDoctorActivity"
+            android:label="@string/sectionDoctorRegister" >
+        </activity>
+        <activity
+            android:name="com.devbus.sweethistory.AlarmActivity"
+            android:label="@string/sectionAlarms" >
         </activity>
 
-		<activity
-			android:name="com.devbus.sweethistory.FormBabyActivity"
-			android:label="@string/sectionBabyRegister" >
-		</activity>
+        <receiver android:name=".SampleAlarmReceiver" />
+        <receiver
+            android:name=".SampleBootReceiver"
+            android:enabled="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
-		<activity
-			android:name="com.devbus.sweethistory.FormDoctorActivity"
-			android:label="@string/sectionDoctorRegister" >
-		</activity>
-
-		<activity
-			android:name="com.devbus.sweethistory.AlarmActivity"
-			android:label="@string/sectionAlarms" >
-		</activity>
-
-
-		<receiver android:name=".SampleAlarmReceiver"/>
-
-		<receiver android:name=".SampleBootReceiver"
-		          android:enabled="false">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-			</intent-filter>
-		</receiver>
-		<service android:name=".SampleSchedulingService" />
-
-	</application>
+        <service android:name=".SampleSchedulingService" />
+    </application>
 
 </manifest>
